--- a/index.html
+++ b/index.html
@@ -4,19 +4,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/output.css">
 </head>
 <body>
-    <div class="">
-        <div class="">
-            <img src="" alt="">
+
+    <!-- <div class="w-full h-screen flex flex-col justify-center items-center gap-4 bg-[url(/images/bg-header-desktop.png)] bg-no-repeat bg-contain sm:h-mx-5">
+        <div class="mb-3">
+            <img class="" src="./images/logo.svg" alt="">
         </div>
-        <div class="">A history of everything you copy</div>
-        <div class="">Clipboard allows you to track and organize everything you copy. <br> Instantly access your clipboard on all your devices.</div>
-        <div class="">
-            <button>Download for IOS</button>
-            <button>Download for Mac</button>
+        <h3 class="text-darkGrayishBlue font-bold text-[40px] text-center">A history of everything you copy</h3>
+        <p class="text-grayishBlue text-md text-center">Clipboard allows you to track and organize everything you copy. <br> Instantly access your clipboard on all your devices.</p>
+        <div class="flex flex-row gap-4 mt-4">
+            <button class="bg-strongCyan px-8 py-3 text-white rounded-full text-sm">Download for IOS</button>
+            <button class="bg-lightBlue px-8 py-3 text-white rounded-full text-sm">Download for Mac</button>
+        </div>
+    </div> -->
+
+    <!-- Added padding (px-6) and changed bg-contain to bg-cover for better mobile filling -->
+    <div class="w-full min-h-screen flex flex-col justify-center items-center gap-6 px-6 bg-[url(/images/bg-header-desktop.png)] bg-no-repeat bg-cover md:bg-contain">
+    
+        <div class="mb-4">
+            <img class="w-24 md:w-auto" src="./images/logo.svg" alt="Logo">
+        </div>
+
+        <!-- Responsive text: smaller on mobile, larger on desktop -->
+        <h3 class="text-darkGrayishBlue font-bold text-3xl md:text-[40px] text-center max-w-lg">
+            A history of everything you copy
+        </h3>
+
+        <p class="text-grayishBlue text-base md:text-md text-center max-w-md">
+            Clipboard allows you to track and organize everything you copy. 
+            <span class="hidden md:inline"><br></span> 
+            Instantly access your clipboard on all your devices.
+        </p>
+
+        <!-- Flex direction changes: column on mobile, row on desktop -->
+        <div class="flex flex-col md:flex-row gap-4 mt-6 w-full md:w-auto">
+            <button class="bg-strongCyan px-8 py-4 md:py-3 text-white rounded-full text-sm font-semibold ">
+                Download for iOS
+            </button>
+            <button class="bg-lightBlue px-8 py-4 md:py-3 text-white rounded-full text-sm font-semibold">
+                Download for Mac
+            </button>
         </div>
     </div>
+
 
     <div>
         <div>
