adding keep track of your snippets

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/output.css">
 </head>
 <body>
-    <div class="">
+    <!-- <div class=" bg-red-500">
         <div class="">
             <img src="" alt="">
         </div>
@@ -16,37 +17,37 @@
             <button>Download for IOS</button>
             <button>Download for Mac</button>
         </div>
-    </div>
+    </div> -->
 
-    <div>
-        <div>
-            <h3>Keep track of your snippets</h3>
-            <p>Clipboard instantly stores any item you copy in the cloud, meaning you can access your snippets immediately on all your devices. Our Mac and IOS apps help you organize everything.</p>
-        </div>
-        <div>
-            <div>
-                <img src="" alt="">
+    <div class="">
+        <div class="max-w-3xl mx-auto text-center mb-20 mt-12">
+            <h3 class="text-3xl font-bold text-darkGrayishBlue mb-5">Keep track of your snippets</h3>
+            <p class="text-sm text-grayishBlue ">Clipboard instantly stores any item you copy in the cloud, meaning you can access your snippets immediately on all your devices. Our Mac and IOS apps help you organize everything.</p>
+        </div> 
+            <div class="flex gap-12 px-4 max-w-* items-center mx-auto justify-center">
+            <div class="flex-[0.4]" >
+                <img class="flex-1 w-full max-w-none" src="./images/image-computer.png" alt="">
             </div>
-            <div>
-                <ul>
-                    <li>
-                        <h1>Quick Search</h1>
-                        <p>Easily search your snippets by content, category, web address, application and more.</p>
+            <div class="flex-[0.4] pl-4" >
+            <ul class="space-y-6 text-xs max-w-sm ">
+                    <li >
+                        <h1 class="font-semi-bold text-darkGrayishBlue ">Quick Search</h1>
+                        <p class="font-sm text-grayishBlue">Easily search your snippets by content, category, web address, application and more.</p>
                     </li>
                     <li>
-                        <h1>Quick Search</h1>
-                        <p>Easily search your snippets by content, category, web address, application and more.</p>
+                        <h1 class="font-semi-bold text-darkGrayishBlue ">Quick Search</h1>
+                        <p class="font-sm text-grayishBlue">Easily search your snippets by content, category, web address, application and more.</p>
                     </li>
                     <li>
-                        <h1>Quick Search</h1>
-                        <p>Easily search your snippets by content, category, web address, application and more.</p>
+                        <h1 class="font-semi-bold text-darkGrayishBlue ">Quick Search</h1>
+                        <p class="font-sm text-grayishBlue">Easily search your snippets by content, category, web address, application and more.</p>
                     </li>
                 </ul>
             </div>
         </div>
     </div>
 
-    <div>
+    <!-- <div>
         <div>
             <h1>Access Clipboard Anywhere </h1>
             <p>Whether you re on the go, or at your computer, you can access all your Clipboard <br> snippets in a few simple clicks </p>
@@ -110,6 +111,6 @@
             <img src="" alt="">
             <img src="" alt="">
         </div>
-    </div>
+    </div> -->
 </body>
 </html>
