using tailwind css for feature 2

--- a/index.html
+++ b/index.html
@@ -4,112 +4,73 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/output.css">
 </head>
 <body>
-    <div class="">
-        <div class="">
-            <img src="" alt="">
-        </div>
-        <div class="">A history of everything you copy</div>
-        <div class="">Clipboard allows you to track and organize everything you copy. <br> Instantly access your clipboard on all your devices.</div>
-        <div class="">
-            <button>Download for IOS</button>
-            <button>Download for Mac</button>
-        </div>
+<div class="max-w-6xl mx-auto px-6 py-16 text-center">
+  <h1 class="text-2xl md:text-3xl font-bold text-darkGrayishBlue mb-4">
+    Access Clipboard Anywhere
+  </h1>
+  <p class="text-grayishBlue text-sm md:text-base max-w-xl mx-auto">
+    Whether you’re on the go, or at your computer you can access all your Clipboard
+    snippets in a few simple clicks.
+  </p>
+
+  <div class="mt-12 flex justify-center">
+    <img
+      src="/images/image-devices.png"
+      alt=""
+      class="max-w-10"
+    />
+  </div>
+</div>
+
+
+<div class="max-w-6xl mx-auto px-6  text-center ">
+  <h1 class="text-2xl md:text-3xl font-bold text-darkGrayishBlue mb-4">
+    Supercharge your workflow
+  </h1>
+  <p class="text-grayishBlue text-sm md:text-base max-w-xl mb-20">
+    We’ve got the tools to boost your productivity.
+  </p>
+
+  <div class="flex grid-cols-1 md:grid-cols-3 gap-11  items-center justify-center">
+    
+    <div class="flex flex-col items-center text-center">
+      <img src="/images/icon-blacklist.svg" alt="" class="mb-6 w-10 h-6" />
+      <h2 class="font-bold text-lg text-darkGrayishBlue mb-3">
+        Create Blacklists
+      </h2>
+      <p class="text-grayishBlue text-sm">
+        Easily search your snippets by content,<br>
+        category, web address, application, and more.
+      </p>
     </div>
 
-    <div>
-        <div>
-            <h3>Keep track of your snippets</h3>
-            <p>Clipboard instantly stores any item you copy in the cloud, meaning you can access your snippets immediately on all your devices. Our Mac and IOS apps help you organize everything.</p>
-        </div>
-        <div>
-            <div>
-                <img src="" alt="">
-            </div>
-            <div>
-                <ul>
-                    <li>
-                        <h1>Quick Search</h1>
-                        <p>Easily search your snippets by content, category, web address, application and more.</p>
-                    </li>
-                    <li>
-                        <h1>Quick Search</h1>
-                        <p>Easily search your snippets by content, category, web address, application and more.</p>
-                    </li>
-                    <li>
-                        <h1>Quick Search</h1>
-                        <p>Easily search your snippets by content, category, web address, application and more.</p>
-                    </li>
-                </ul>
-            </div>
-        </div>
+    <div class="flex flex-col items-center text-center">
+      <img src="/images/icon-text.svg" alt="" class="mb-6 w-10 h-6" />
+      <h2 class="font-bold text-lg text-darkGrayishBlue mb-3">
+        Plain Text Snippets
+      </h2>
+      <p class="text-grayishBlue text-sm">
+        Remove unwanted formatting from copied<br>
+        text for a consistent look.
+      </p>
     </div>
 
-    <div>
-        <div>
-            <h1>Access Clipboard Anywhere </h1>
-            <p>Whether you re on the go, or at your computer, you can access all your Clipboard <br> snippets in a few simple clicks </p>
-        </div>
-        <div>
-            <img src="" alt="">
-        </div>
+    <div class="flex flex-col items-center text-center">
+      <img src="/images/icon-preview.svg" alt="" class="mb-6 w-10 h-6" />
+      <h2 class="font-bold text-lg text-darkGrayishBlue mb-3">
+        Sneak Preview
+      </h2>
+      <p class="text-grayishBlue text-sm">
+        Quick preview of all snippets on your<br>
+        Clipboard for easy access.
+      </p>
     </div>
-    <div>
-        <div>
-            <h1>Supercharge your workflow </h1>
-            <p>We ve got the tools to boost your productivity </p>
-        </div>
-        <div>
-            <div>
-                <img src="" alt="">
-                <h2>Create Blacklists</h2>
-                <p>Easily  your snippets by content , <br> category, web adrese, application , and <br> more </p>
-            </div>
-            <div>
-                <img src="" alt="">
-                <h2>plain Text Snippets </h2>
-                <p>Easily  your snippets by content , <br> category, web adrese, application , and <br> more </p>
-            </div>
-            <div>
-                <img src="" alt="">
-                <h2>Sneak Preview</h2>
-                <p>Easily  your snippets by content , <br> category, web adrese, application , and <br> more </p>
-            </div>
-        </div>
-        <div>
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-        </div>
-    </div>
-    <div>
-        <h1>Clipboard for iOS and MacOS</h1>
-        <p>Available for free on the app Store, download for mac or iOS, sync wth iCloud and <br> you re ready to start adding to your clipboard </p>
-        <div>
-            <button>Download for iOS</button>
-            <button>Download for Mac</button>
-        </div>
-    </div>
-    <div>
-        <div><img src="" alt=""></div>
-        <div>
-            <ul>
-                <li>FAQs</li>
-                <li>Contact Us</li>
-                <li>Privacy Policy </li>
-                <li>Press Kit</li>
-                <li>Press Kit</li>
-                <li>Instail Guide </li>
-            </ul>
-        </div>
-        <div>
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-        </div>
-    </div>
+
+  </div>
+</div>
+
 </body>
 </html>
