hero section modified

--- a/index.html
+++ b/index.html
@@ -20,25 +20,23 @@
         </div>
     </div> -->
 
-    <!-- Added padding (px-6) and changed bg-contain to bg-cover for better mobile filling -->
+    <!-- Hero setion by younes -->
     <div class="w-full min-h-screen flex flex-col justify-center items-center gap-6 px-6 bg-[url(/images/bg-header-desktop.png)] bg-no-repeat bg-cover md:bg-contain">
     
         <div class="mb-4">
-            <img class="w-24 md:w-auto" src="./images/logo.svg" alt="Logo">
+            <img class="w-10 md:w-auto" src="./images/logo.svg" alt="Logo">
         </div>
 
-        <!-- Responsive text: smaller on mobile, larger on desktop -->
-        <h3 class="text-darkGrayishBlue font-bold text-3xl md:text-[40px] text-center max-w-lg">
+        <h3 class="text-darkGrayishBlue font-bold text-3xl md:text-[40px] text-center max-w-xl">
             A history of everything you copy
         </h3>
 
-        <p class="text-grayishBlue text-base md:text-md text-center max-w-md">
+        <p class="text-grayishBlue text-base md:text-md text-center max-w-sm">
             Clipboard allows you to track and organize everything you copy. 
             <span class="hidden md:inline"><br></span> 
             Instantly access your clipboard on all your devices.
         </p>
 
-        <!-- Flex direction changes: column on mobile, row on desktop -->
         <div class="flex flex-col md:flex-row gap-4 mt-6 w-full md:w-auto">
             <button class="bg-strongCyan px-8 py-4 md:py-3 text-white rounded-full text-sm font-semibold ">
                 Download for iOS
@@ -48,6 +46,10 @@
             </button>
         </div>
     </div>
+    <!-- Hero setion by younes -->
+
+
+
 
 
     <div>
