last version corrected styles

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+     <!-- <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script> -->
     <link rel="stylesheet" href="/css/style.css">
     <title>Document</title>
     <link rel="stylesheet" href="./css/output.css">
@@ -15,7 +15,7 @@
         <div class="">
             <img src="" alt="">
 
-    <!-- <div class="w-full h-screen flex flex-col justify-center items-center gap-4 bg-[url(/images/bg-header-desktop.png)] bg-no-repeat bg-contain sm:h-mx-5">
+     <div class="w-full h-screen flex flex-col justify-center items-center gap-4 bg-[url(/images/bg-header-desktop.png)] bg-no-repeat bg-contain sm:h-mx-5">
         <div class="mb-3">
             <img class="" src="./images/logo.svg" alt="">
         </div>
@@ -60,29 +60,30 @@
 
 
     <div class="">
-        <div class="max-w-3xl mx-auto text-center mb-20 mt-12">
+        <div class="max-w-3xl mx-auto text-center mb-20 mt-5">
             <h3 class="text-3xl font-bold text-darkGrayishBlue mb-5">Keep track of your snippets</h3>
             <p class="text-sm text-grayishBlue ">Clipboard instantly stores any item you copy in the cloud, meaning you can access your snippets immediately on all your devices. Our Mac and IOS apps help you organize everything.</p>
         </div> 
-            <div class="flex gap-12 px-4 max-w-* items-center mx-auto justify-center">
-            <div class="flex-[0.4]" >
-                <img class="flex-1 w-full max-w-none" src="./images/image-computer.png" alt="">
-            </div>
-            <div class="flex-[0.4] pl-4" >
-            <ul class="space-y-6 text-xs max-w-sm ">
-                    <li >
-                        <h1 class="font-semi-bold text-darkGrayishBlue ">Quick Search</h1>
-                        <p class="font-sm text-grayishBlue">Easily search your snippets by content, category, web address, application and more.</p>
-                    </li>
-                    <li>
-                        <h1 class="font-semi-bold text-darkGrayishBlue ">Quick Search</h1>
-                        <p class="font-sm text-grayishBlue">Easily search your snippets by content, category, web address, application and more.</p>
-                    </li>
-                    <li>
-                        <h1 class="font-semi-bold text-darkGrayishBlue ">Quick Search</h1>
-                        <p class="font-sm text-grayishBlue">Easily search your snippets by content, category, web address, application and more.</p>
-                    </li>
-                </ul>
+            <div class="flex gap-12 px-4 items-center mx-auto justify-center">
+                <div class="flex-[0.4] flex justify-end items-center" >
+                    <img class="flex-1 w-full max-w-[500px]" src="./images/image-computer.png" alt="">
+                </div>
+                <div class=" pl-4" >
+                    <ul class="space-y-6 text-xs max-w-sm flex flex-col gap-5 items-center justify-start">
+                        <li >
+                            <h1 class="font-bold text-[30px] text-darkGrayishBlue ">Quick Search</h1>
+                            <p class="font-md pt-4 text-grayishBlue">Easily search your snippets by content, category, web address, application and more.</p>
+                        </li>
+                        <li>
+                            <h1 class="font-bold text-[30px] text-darkGrayishBlue ">Quick Search</h1>
+                            <p class="font-md pt-4 text-grayishBlue">Easily search your snippets by content, category, web address, application and more.</p>
+                        </li>
+                        <li>
+                            <h1 class="font-bold text-[30px] text-darkGrayishBlue ">Quick Search</h1>
+                            <p class="font-md pt-4 text-grayishBlue">Easily search your snippets by content, category, web address, application and more.</p>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
@@ -138,17 +139,17 @@
     <img
       src="/images/image-devices.png"
       alt=""
-      class="max-w-10"
+      class="max-w-[500px]"
     />
   </div>
 </div>
 
 
-<div class="max-w-6xl mx-auto px-6  text-center ">
+<div class="max-w-6xl mx-auto px-6  flex flex-col justify-center items-center">
   <h1 class="text-2xl md:text-3xl font-bold text-darkGrayishBlue mb-4">
     Supercharge your workflow
   </h1>
-  <p class="text-grayishBlue text-sm md:text-base max-w-xl mb-20">
+  <p class="text-grayishBlue text-center text-sm md:text-base max-w-xl mb-20">
     We’ve got the tools to boost your productivity.
   </p>
 
