--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <!-- <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script> -->
     <link rel="stylesheet" href="/css/style.css">
-    <title>Document</title>
+    <title>ODC Landing Page</title>
     <link rel="stylesheet" href="./css/output.css">
 </head>
 <body>
